--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -10,34 +10,44 @@
 </head>
 
 <body>
-    <table class="table mt-4">
-        <thead>
-            <tr>
-                <th scope="col">Email</th>
-                <th scope="col">Firstname</th>
-                <th scope="col">Lastname</th>
-                <th scope="col">Address</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% for (let i=0; i < dataTable.length; i++) { %>
-                <tr>
-                    <td>
-                        <%= dataTable[i].email %>
-                    </td>
-                    <td>
-                        <%= dataTable[i].firstName %>
-                    </td>
-                    <td>
-                        <%= dataTable[i].lastName %>
-                    </td>
-                    <td>
-                        <%= dataTable[i].address %>
-                    </td>
-                </tr>
-                <% } %>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="row">
+            <table class="table mt-4">
+                <thead>
+                    <tr>
+                        <th scope="col">Email</th>
+                        <th scope="col">Firstname</th>
+                        <th scope="col">Lastname</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for (let i=0; i < dataTable.length; i++) { %>
+                        <tr>
+                            <td>
+                                <%= dataTable[i].email %>
+                            </td>
+                            <td>
+                                <%= dataTable[i].firstName %>
+                            </td>
+                            <td>
+                                <%= dataTable[i].lastName %>
+                            </td>
+                            <td>
+                                <%= dataTable[i].address %>
+                            </td>
+                            <td>
+                                <a href="/edit-crud?id=<%= dataTable[i].id %>" type="button" class="btn btn-primary me-4">Edit</a>
+                                <a href="" type="button" class="btn btn-warning">Del</a>
+                            </td>
+                        </tr>
+                        <% } %>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
