--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -39,7 +39,7 @@
                             </td>
                             <td>
                                 <a href="/edit-crud?id=<%= dataTable[i].id %>" type="button" class="btn btn-primary me-4">Edit</a>
-                                <a href="" type="button" class="btn btn-warning">Del</a>
+                                <a href="/delete-crud?id=<%= dataTable[i].id %>" type="button" class="btn btn-warning">Del</a>
                             </td>
                         </tr>
                         <% } %>
